fix font-size/letterspacing

--- a/Frontend/src/Styles/Navbar.css
+++ b/Frontend/src/Styles/Navbar.css
@@ -18,7 +18,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 1rem;
   z-index: 1000;
 }
 
@@ -35,7 +34,7 @@ nav a {
   font-size: 1.2rem;
   font-weight: 500;
   color: rgb(0, 0, 0);
-  margin-right: 0.5rem;
+
   text-decoration: none;
   font-family: Cinzel;
   letter-spacing: 0.1rem;
@@ -45,7 +44,7 @@ nav a {
 nav ul {
   list-style: none;
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   padding: 0;
   margin: 0;
 }
@@ -57,7 +56,7 @@ nav ul li a {
   position: relative;
   transition: color 0.2s ease;
   font-weight: 200;
-  letter-spacing: 0.1rem;
+  /* letter-spacing: 0.1rem; */
 }
 
 .nav-login-btn {
